--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -14,7 +14,7 @@
 					<a class="nav-link" href="/catalogue">PRODUCTS</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="">BOOKING</a>
+					<a class="nav-link" href="/">BOOKING</a>
 				</li>
 			</ul>
 			<ul class="navbar-nav ml-auto">
