--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -66,6 +66,13 @@
 	<!-- custom javascript -->
 	<script src="../js/script.js" type="text/javascript"></script>
 
+	<style>
+		body {
+		background-color: #F1EDE5;
+		font-family: 'Poppins';
+		}
+	</style>
+
 	<title>The Healing Inc.</title>
 </head>
 
