--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -5,8 +5,8 @@
             <div class="row">
                 <aside class="col-md-4">
                     <article class="mr-3">
-                        <img src="/img/logo.png" alt="logo" width="250" height="100">
-                        <p class="mt-3">We aim to provide a one-stop service for TCM users.</p>
+                        <img src="../img/logo.png" alt="logo" width="250" height="100">
+                        <p class="mt-3">We aim to prpovide a one-stop service for TCM users.</p>
                         <div>
                             <a class="btn btn-icon btn-light" title="Facebook" target="_blank" href="#"><i
                                     class="fab fa-facebook-f"></i></a>
@@ -33,6 +33,9 @@
                     <ul class="list-unstyled">
                         <li> <a href="#"> User Login </a></li>
                         <li> <a href="#"> User register </a></li>
+                        <li> <a href="#"> Account Setting </a></li>
+                        <li> <a href="#"> My Orders </a></li>
+                        <li> <a href="#"> My Wishlist </a></li>
                     </ul>
                 </aside>
             </div> <!-- row.// -->
@@ -47,3 +50,5 @@
         </section>
     </div><!-- //container -->
 </footer>
+<!-- ========================= FOOTER END // ========================= -->
+
