login, register +broken flash
delete node_modules>npm install>npm install connect-flash flash-messenger

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -86,6 +86,13 @@
 
 	{{> _footer }}
 
+	{{!-- <!-- flash -->
+	{{> _navbar }}
+	<div class="container">
+
+	{{{body}}}
+	</div> --}}
+
 	<!-- Custom JS -->
 	<script src="/js/common.js"></script>
 </body>
