--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -39,10 +39,10 @@
 					<a href="" class="nav-link">CART</a>
 				</li>
 				<li class="nav-item">
-					<a href="" class="nav-link">LOGIN</a>
+					<a href="/user/login" class="nav-link">LOGIN</a>
 				</li>
 				<li class="nav-item">
-					<a href="" class="nav-link">REGISTER</a>
+					<a href="/user/register" class="nav-link">REGISTER</a>
 				</li>
 				{{/if}}
 			</ul>
