--- a/views/user/register.handlebars
+++ b/views/user/register.handlebars
@@ -6,11 +6,11 @@
 			<form action="" method="post">
 				<div class="form-group">
 					<label for="name">Name</label>
-					<input type="text" class="form-control" name="name" value="" required>
+					<input type="text" class="form-control" name="name" value="{{name}}" required>
 				</div>
 				<div class="form-group">
 					<label for="email">Email</label>
-					<input type="email" name="email" class="form-control" value="" required>
+					<input type="email" name="email" class="form-control" value="{{email}}" required>
 				</div>
 				<div class="form-group">
 					<label for="password">Password</label>
