--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -71,6 +71,12 @@
 		background-color: #F1EDE5;
 		font-family: 'Poppins';
 		}
+
+		.btn {
+		color: #FFFFFF;
+		background: #8BAD97;
+		border-radius: 60px;
+		}
 	</style>
 
 	<title>The Healing Inc.</title>
