--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,11 +1,21 @@
-<img src="img/landing-page.png" class="rounded float-right" alt="...">
-<br>
-<h1 class="landing-title">Take healing to the next level.</h1>
-<br><br><br>
-<h5 class="landing-intro">
-	Take our simple quiz to get a daily TCM pack tailored to your goals, lifestyle and diet. Packs start at under
-	SG$0.9/day. Monthly deliveries. Adjust anytime.
-</h5>
-<br><br>
-<button type="button" class="btn btn-primary btn-lg">Start Now</button>
+<section class="p-5 p-lg-0 pt-lg-5 text-left text-sm-start" id="home">
+	<div class="container">
+		<div class="d-sm-flex align-items-center justify-content-between">
+			<div>
+				<h1 class="landing-page">Take Healing To The<span class="text-color"> Next Level.</span></h1>
+				<p class="lead my-4 ">
+					Take our simple quiz to get a daily TCM pack tailored to your goals, lifestyle and diet. Packs start at under
+					SG$0.9/day. Monthly deliveries. Adjust anytime.
+				</p>
 
+				<button type="button" class="btn btn-lg" data-bs-toggle="modal" data-bs-target="#">
+					Start Quiz
+				</button>
+
+			</div>
+
+			<img class="img-fluid d-none d-sm-block" src='img/landing-page.png' title='' />
+
+		</div>
+	</div>
+</section>
