--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -87,17 +87,13 @@
 	{{> _navbar }}
 
 	<div class="container">
+		{{> _flashmsg }}
 		{{{body}}}
 	</div>
 
 	{{> _footer }}
 
-	{{!-- <!-- flash -->
-	{{> _navbar }}
-	<div class="container">
 
-	{{{body}}}
-	</div> --}}
 
 	<!-- Custom JS -->
 	<script src="/js/common.js"></script>
