--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -72,10 +72,14 @@
 		font-family: 'Poppins';
 		}
 
-		.btn {
-		color: #FFFFFF;
+		.btn-landing{
+		color: #000000;
 		background: #8BAD97;
 		border-radius: 60px;
+		width: 265px;
+		height: 62px;
+		left: 100px;
+		top: 564px;
 		}
 	</style>
 
