--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -22,6 +22,10 @@
 <div class="container full-page mt-5" id="what-we-do">
 	<div class="text-center mb-5">
 		<h2>What We Do<h2>
+		<p class="lead my-4 ">
+			Take our simple quiz to get a daily TCM pack tailored to your goals, lifestyle and diet. Packs start at under
+			SG$0.9/day. Monthly deliveries. Adjust anytime.
+		</p>
 	</div>
 	<div class="row d-flex justify-content-between">
 		<div class="col-md-4 mb-4">
