--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -6,7 +6,7 @@
                 <aside class="col-md-4">
                     <article class="mr-3">
                         <img src="../img/logo.png" alt="logo" width="250" height="100">
-                        <p class="mt-3">We aim to prpovide a one-stop service for TCM users.</p>
+                        <p class="mt-3">We aim to bring healing to the next level.</p>
                         <div>
                             <a class="btn btn-icon btn-light" title="Facebook" target="_blank" href="#"><i
                                     class="fab fa-facebook-f"></i></a>
