--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -7,124 +7,56 @@
 					Take our simple quiz to get a daily TCM pack tailored to your goals, lifestyle and diet. Packs start at under
 					SG$0.9/day. Monthly deliveries. Adjust anytime.
 				</p>
-
 				<button type="button" class="btn btn-lg btn-landing" data-bs-toggle="modal" data-bs-target="#">
 					Start Quiz
 				</button>
-
 			</div>
-
 			<img class="img-fluid d-none d-sm-block" src='img/landing-page.png' title='' />
 		</div>
 	</div>
 </section>
 
-<div class="container full-page mt-5" id="what-we-do">
-	<div class="text-center mb-5">
-		<h2>What We Do<h2>
-		<p class="lead my-4 ">
-			Take our simple quiz to get a daily TCM pack tailored to your goals, lifestyle and diet. Packs start at under
-			SG$0.9/day. Monthly deliveries. Adjust anytime.
-		</p>
-	</div>
-	<div class="row d-flex justify-content-between">
-		<div class="col-md-4 mb-4">
-			<div class="card text-center" id="circle">
-				<img class="card-img-top"
-					src="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/images/carousel/03.jpg"
-					alt="Card image cap">
+<section>
+	<h2 class="text-center mb-5">What We Do</h2>
+	<p class="lead my-4 text-center">
+		Take our simple quiz to get a daily TCM pack tailored to your goals, lifestyle and diet. Packs start at under
+		SG$0.9/day. Monthly deliveries. Adjust anytime.
+	</p>
+	<div>
+		<div class="card-deck">
+			<div class="card" style="text-align: center;">
+				<i class="fa-solid fa-head-side-brain"></i>
 				<div class="card-body">
-					<h4 class="card-title">Card title</h4>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-						card's content.</p>
-					<a href="#" class="btn btn-primary custom-button">Read more</a>
+					<h5 class="card-title">Know Yourself</h5>
+					<p class="card-text">
+						Take a online accessment on your lifestyle, health and health goals
+					</p>
 				</div>
 			</div>
-		</div>
-
-		<div class="col-md-4 mb-4">
-			<div class="card text-center">
-				<img class="card-img-top"
-					src="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/images/carousel/03.jpg"
-					alt="Card image cap">
+			<div class="card" style="text-align: center;">
+				<i class="fa-solid fa-capsules fa-10x"></i>
 				<div class="card-body">
-					<h4 class="card-title">Card title</h4>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-						card's content.</p>
-					<a href="#" class="btn btn-primary custom-button">Read more</a>
+					<h5 class="card-title">See Your Pack</h5>
+					<p class="card-text">
+						Get a list of recommended TCM based on your online accessment
+					</p>
 				</div>
 			</div>
-		</div>
-
-		<div class="col-md-4 mb-4">
-			<div class="card text-center">
-				<img class="card-img-top"
-					src="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/images/carousel/03.jpg"
-					alt="Card image cap">
+			<div class="card" style="text-align: center;">
+				<i class="fa-regular fa-timer"></i>
 				<div class="card-body">
-					<h4 class="card-title">Card title</h4>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-						card's content.</p>
-					<a href="#" class="btn btn-primary custom-button">Read more</a>
+					<h5 class="card-title">Continue Monthly/h5>
+					<p class="card-text">
+						Subscribe to our monthly deliveries. Adjust anytime.
+					</p>
 				</div>
+				<i class="fa-solid fa-timer"></i>
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 
-<div class=" container full-page mt-5 text-center mb-5">
-	<div class="curved upper">
-		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
-			<path fill="rgba(152, 152, 191, 0.5)" fill-opacity="1"
-				d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-			</path>
-		</svg>
-	</div>
-	
-	<div class="curved-div">
-		<!-- Testimonials section-->
-		<section class="py-5 border-bottom">
-			<div class="container px-5 my-5 px-5">
-				<div class="text-center mb-5">
-					<h2 class="fw-bolder">Customer testimonials</h2>
-					<p class="lead mb-0">Our customers love working with us</p>
-				</div>
-		
-				<div class='reviews'>
-					<!-- Panel one -->
-					<div class='panel'>
-						<img src='/img/logo.png'>
-						<p>
-						<div class="ms-4">
-							<h5 class="mb-1"></h5>
-							<div class="small text-muted">Product: Mushroom Soup</div>
-							<div class="small text-muted">Ratings (1-5): 5</div>
-							<div class="small text-muted"><i class="fas fa-tape"></i> | <i class="far fa-gem"></i> </div>
-							<p class="mb-1">
-		
-							</p>
-							<p class="mb-1">
-								- Natthida , 2022-01-2
-		
-							</p>
-						</div>
-						</p>
-					</div>
-				</div>
-				<script>
-					speed = 600
-				</script>
-			</div>
-		</section>
-		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
-			<path fill="#F1EDE5" fill-opacity="1"
-				d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-			</path>
-		</svg>
-	</div>
-</div>
-
-<div class=" container full-page mt-5 text-center mb-5">
+<div class="container full-page mt-5 text-center mb-5">
 	<h2>Get 20% Off your <br> first order now!</h2>
 	<form>
 		<div class="form-group left">
