--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="icon" type="image/png" href="/img/logo.png">
 
 	{{!--Font Awesome icons --}}
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -58,6 +59,7 @@
 	
 	<!-- Font awesome 5 -->
 	<link href="../fonts/fontawesome/css/all.min.css" type="text/css" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/f93b590445.js" crossorigin="anonymous"></script>
 	
 	<!-- custom style -->
 	<link href="../css/ui.css" rel="stylesheet" type="text/css" />
