--- a/views/layouts/staffMain.handlebars
+++ b/views/layouts/staffMain.handlebars
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" type="image/png" href="../static/images/Chinese.png">
+    <link rel="icon" type="image/png" href="/img/logo.png">
 
     <title>The Healing Inc.</title>
 
@@ -17,6 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f93b590445.js" crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template-->
     <link href="/css/sb-admin-2.min.css" rel="stylesheet">
