--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -30,7 +30,7 @@
 				</li>
 				{{else}}
 				<li class="nav-item">
-					<a href="#" class="nav-link"><i class="fa-regular fa-magnifying-glass"></i></a>
+					<a href="#" class="nav-link"><i class="fa-solid fa-magnifying-glass"></i></a>
 				</li>
 				<li class="nav-item">
 					<a href="#" class="nav-link">|</a>
