--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -16,56 +16,102 @@
 	</div>
 </section>
 
-<section>
-	<h2 class="text-center mb-5">What We Do</h2>
-	<p class="lead my-4 text-center">
-		Take our simple quiz to get a daily TCM pack tailored to your goals, lifestyle and diet. Packs start at under
-		SG$0.9/day. Monthly deliveries. Adjust anytime.
-	</p>
-	<div>
-		<div class="card-deck">
-			<div class="card" style="text-align: center;">
-				<i class="fa-solid fa-head-side-brain"></i>
-				<div class="card-body">
-					<h5 class="card-title">Know Yourself</h5>
-					<p class="card-text">
-						Take a online accessment on your lifestyle, health and health goals
-					</p>
-				</div>
-			</div>
-			<div class="card" style="text-align: center;">
+<!-- Section: What We Do -->
+<section class="services">
+	<h1>What We Do</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisi magna. Morbi et diam ut sem tempor ornare.
+	Vestibulum vestibulum laoreet libero, non finibus ligula ullamcorper quis.</p>
+	<div class="row">
+		<div class="ser-col" style="background: #d4ebdc;">
+			<div>
 				<i class="fa-solid fa-capsules fa-10x"></i>
-				<div class="card-body">
-					<h5 class="card-title">See Your Pack</h5>
-					<p class="card-text">
-						Get a list of recommended TCM based on your online accessment
-					</p>
-				</div>
 			</div>
-			<div class="card" style="text-align: center;">
-				<i class="fa-regular fa-timer"></i>
-				<div class="card-body">
-					<h5 class="card-title">Continue Monthly/h5>
-					<p class="card-text">
-						Subscribe to our monthly deliveries. Adjust anytime.
-					</p>
-				</div>
-				<i class="fa-solid fa-timer"></i>
+			<h3>Know Yourself</h3>
+			<p>
+				Take a online accessment on your lifestyle, health and health goals
+			</p>
+		</div>
+		<div class="ser-col" style="background: #fadda6;">
+			<div>
+				<i class="fa-solid fa-capsules fa-10x"></i>
+			</div>
+			<h3>See Your Pack</h3>
+			<p>
+				Get a list of recommended TCM based on your online accessment
+			</p>
+		</div>
+		<div class="ser-col">
+			<div>
+				<i class="fa-solid fa-capsules fa-10x"></i>
+			</div>
+			<h3>Continue Monthly</h3>
+			<p>
+				Subscribe to our monthly deliveries. Adjust anytime.
+			</p>
+		</div>
+	</div>
+</section>
+
+<!-- Section: Our Sources -->
+<section class="countries">
+	<h1>Our Sources</h1>
+	<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..</p>
+	<div class="row">
+		<div class="countries-col">
+			<img src="/img/thailand.jpg" alt="">
+			<div class="layer">
+				<h3>THAILAND</h3>
+			</div>
+		</div>
+		<div class="countries-col">
+			<img src="/img/japan.jpg" alt="">
+			<div class="layer">
+				<h3>JAPAN</h3>
+			</div>
+		</div>
+		<div class="countries-col">
+			<img src="/img/china.jpg" alt="">
+			<div class="layer">
+				<h3>CHINA</h3>
 			</div>
 		</div>
 	</div>
 </section>
 
-<div class="container full-page mt-5 text-center mb-5">
-	<h2>Get 20% Off your <br> first order now!</h2>
-	<form>
-		<div class="form-group left">
-			<input type="email" class="form-control" placeholder="name@example.com">
-			<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-				else.</small>
+<!-- Section: Testimonials -->
+<section class="testimonials">
+	<h1>What Our Customer Says</h1>
+	<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..</p>
+	<div class="row">
+		<div class="testimonial-col" style="background: #fadda6;">
+			<img src="/img/user1.jpg">
+			<div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc egestas velit lacus. Morbi fermentum
+					non neque nec eleifend. Integer at sapien vehicula, placerat neque sit amet, pulvinar arcu. Etiam
+					condimentum libero eget nulla cursus, sit amet tempus magna ornare.</p>
+				<h3>Christine Berkley</h3>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star-o"></i>
+				<!-- 4 stars -->
+			</div>
 		</div>
-		<div class="form-group right ml-2">
-			<button type="submit" class="btn btn-primary custom-button">Submit</button>
+		<div class="testimonial-col" style="background: #fadda6;">
+			<img src="/img/user2.jpg">
+			<div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc egestas velit lacus. Morbi fermentum
+					non neque nec eleifend. Integer at sapien vehicula, placerat neque sit amet, pulvinar arcu. Etiam
+					condimentum libero eget nulla cursus, sit amet tempus magna ornare.</p>
+				<h3>David Byer</h3>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star-half-o"></i>
+				<!-- 4 1/2 stars -->
+			</div>
 		</div>
-	</form>
-</div>
+	</div>
+</section>
