--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 .logo{
   width:130px;
   margin:auto;
@@ -63,4 +68,161 @@ h2 {
   font-weight: 400;
   font-size: 48px;
   line-height: 60px;
+}
+
+#home {
+  padding-top: 150px;
+  margin: auto;
+}
+
+.services {
+  width: 80%;
+  text-align: center;
+  margin: auto;
+  /* make text into center */
+}
+
+p {
+  color: rgb(0, 0, 0);
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
+}
+
+.row {
+  margin-top: 5;
+  display: flex;
+  justify-content: space-between;
+}
+
+.ser-col {
+  flex-basis: 31%;
+  background: #d9d9ee;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  padding: 20px 12px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+.ser-col:hover {
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
+}
+
+@media(max-width: 700px) {
+  .row {
+    flex-direction: column;
+    /* makes it becomes a column in the smaller screen */
+  }
+}
+
+/* section: campus */
+
+.countries {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.countries-col {
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+  /* make round and postioned */
+}
+
+.countries-col img {
+  width: 100%;
+  display: block;
+  /* fill all */
+}
+
+.layer {
+  background: transparent;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s
+    /* the red thingy upon hover */
+}
+
+.layer:hover {
+  background: rgba(237, 250, 253, 0.7);
+}
+
+.layer h3 {
+  width: 100%;
+  font-weight: 500;
+  color: #fff;
+  font-size: 26px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
+  /* the words at the bottom */
+}
+
+.layer:hover h3 {
+  bottom: 49%;
+  opacity: 1;
+  /* the names on the image will only show up on hover */
+  /* makes the title comes from the bottom to the centre */
+}
+
+/* Section: Testimonials */
+
+.testimonials {
+  width: 80%;
+  margin: auto;
+  padding-top: 100px;
+  text-align: center;
+  /* the header of the testimonial */
+}
+
+.testimonial-col {
+  flex-basis: 44%;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  text-align: left;
+  background: #EDFAFD;
+  padding: 25px;
+  cursor: pointer;
+  display: flex;
+}
+
+.testimonial-col img {
+  height: 40px;
+  margin-left: 5px;
+  margin-right: 30px;
+  border-radius: 50%;
+}
+
+.testimonial-col p {
+  padding: 0;
+}
+
+.testimonial-col h3 {
+  margin-top: 15px;
+  text-align: left;
+}
+
+.testimonial-col .fa {
+  color: #023E8A;
+}
+
+@media(max-width: 700) {
+  .testimonial-col img {
+    margin-left: 0px;
+    margin-right: 15px;
+  }
+
+  /* to make use of less space */
 }
