--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,3 +1,43 @@
+{{!-- <div class="container full-page mt-5 text-center mb-5">
+    <h2>Get 20% Off your <br> first order now!</h2>
+    <form>
+        <div class="form-group left">
+            <input type="email" class="form-control" placeholder="name@example.com">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                else.</small>
+        </div>
+        <div class="form-group right ml-2">
+            <button type="submit" class="btn btn-primary custom-button">Submit</button>
+        </div>
+    </form>
+</div> --}}
+<!-- ========================= SECTION SUBSCRIBE  ========================= -->
+<section class="section-subscribe padding-y-lg">
+    <div class="container">
+
+        <p class="pb-2 text-center text-white">Delivering the latest product trends and industry news straight to your
+            inbox</p>
+
+        <div class="row justify-content-md-center">
+            <div class="col-lg-5 col-md-6">
+                <form class="form-row">
+                    <div class="col-md-8 col-7">
+                        <input class="form-control border-0" placeholder="Your Email" type="email">
+                    </div> <!-- col.// -->
+                    <div class="col-md-4 col-5">
+                        <button type="submit" class="btn btn-block btn-warning"> <i class="fa fa-envelope"></i>
+                            Subscribe </button>
+                    </div> <!-- col.// -->
+                </form>
+                <small class="form-text text-white-50">We’ll never share your email address with a third-party. </small>
+            </div> <!-- col-md-6.// -->
+        </div>
+
+
+    </div>
+</section>
+<!-- ========================= SECTION SUBSCRIBE END// ========================= -->
+
 <!-- ========================= FOOTER ========================= -->
 <footer class="section-footer border-top">
     <div class="container">
