--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -5,7 +5,7 @@
 				<h1 class="landing-page">Take Healing To The<span class="text-color"> Next Level.</span></h1>
 				<p class="lead my-4 ">
 					Take our simple quiz to get a daily TCM pack tailored to your goals, lifestyle and diet. Packs start at under
-					SG$0.9/day. Monthly deliveries. Adjust anytime.
+					SG$0.9/day. Monthly deliveries. Adjust anytime. 
 				</p>
 				<button type="button" class="btn btn-lg btn-landing" data-bs-toggle="modal" data-bs-target="#">
 					Start Quiz
@@ -23,7 +23,7 @@
 	Vestibulum vestibulum laoreet libero, non finibus ligula ullamcorper quis.</p>
 	<div class="row">
 		<div class="ser-col" style="background: #d4ebdc;">
-			<div>
+			<div style="padding: 4rem;">
 				<i class="fa-solid fa-capsules fa-10x"></i>
 			</div>
 			<h3>Know Yourself</h3>
@@ -32,7 +32,7 @@
 			</p>
 		</div>
 		<div class="ser-col" style="background: #fadda6;">
-			<div>
+			<div style="padding: 4rem;">
 				<i class="fa-solid fa-capsules fa-10x"></i>
 			</div>
 			<h3>See Your Pack</h3>
@@ -41,7 +41,7 @@
 			</p>
 		</div>
 		<div class="ser-col">
-			<div>
+			<div style="padding: 4rem;">
 				<i class="fa-solid fa-capsules fa-10x"></i>
 			</div>
 			<h3>Continue Monthly</h3>
@@ -84,12 +84,12 @@
 	<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..</p>
 	<div class="row">
 		<div class="testimonial-col" style="background: #fadda6;">
-			<img src="/img/user1.jpg">
+			<img src="/img/jungkook.jpg">
 			<div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc egestas velit lacus. Morbi fermentum
 					non neque nec eleifend. Integer at sapien vehicula, placerat neque sit amet, pulvinar arcu. Etiam
 					condimentum libero eget nulla cursus, sit amet tempus magna ornare.</p>
-				<h3>Christine Berkley</h3>
+				<h3>Lee Ming</h3>
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
@@ -99,12 +99,12 @@
 			</div>
 		</div>
 		<div class="testimonial-col" style="background: #fadda6;">
-			<img src="/img/user2.jpg">
+			<img src="/img/lando.jpg">
 			<div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc egestas velit lacus. Morbi fermentum
 					non neque nec eleifend. Integer at sapien vehicula, placerat neque sit amet, pulvinar arcu. Etiam
 					condimentum libero eget nulla cursus, sit amet tempus magna ornare.</p>
-				<h3>David Byer</h3>
+				<h3>Carlando Morris</h3>
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
