--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,4 +1,4 @@
-<section class="p-5 p-lg-0 pt-lg-5 text-left text-sm-start" id="home">
+<section class="text-left text-sm-start" id="home">
 	<div class="container">
 		<div class="d-sm-flex align-items-center justify-content-between">
 			<div>
