--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -26,7 +26,7 @@
 					<a href="" class="nav-link">CART</a>
 				</li>
 				<li class="nav-item">
-					<a href="" class="nav-link">LOGOUT</a>
+					<a href="/user/logout" class="nav-link">LOGOUT</a>
 				</li>
 				{{else}}
 				<li class="nav-item">
