--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -25,6 +25,11 @@
 				<li class="nav-item">
 					<a href="" class="nav-link">CART</a>
 				</li>
+
+				<li class="nav-item">
+					<a href="/user/profile" class="nav-link">PROFILE</a>
+				</li>
+
 				<li class="nav-item">
 					<a href="/user/logout" class="nav-link">LOGOUT</a>
 				</li>
