--- a/views/user/profile.handlebars
+++ b/views/user/profile.handlebars
@@ -1,44 +1,37 @@
 <div class="container">
-	{{#if videos}}
+	{{#if user}}
 	<div class="card card-body">
-		<h3 class="text-primary">Profile</h3>
-		{{#each videos}}
+		{{!-- <h3 class="text-primary">{{title}}</h3> --}}
+		{{!-- {{!-- {{#each videos}} --}}
 		<div class="card border-primary mb-2 w-100 mx-auto">
 			<div class="card-header">
-				{{!-- <h5 class="card-title">{{title}}</h5> --}}
-				<h5 class="card-title">hello</h5>
+				<h5 class="card-title">{{title}}</h5>
 			</div>
 			<div class="card-body">
 				<div class="row">
 					<div class="col-sm-12 col-md-12 col-lg-3">
-						<p class="font-italic">Subtitles</p>
+						<p class="font-italic">Name</p>
 						<p class="text-info">
-							Subtitles
+							hellllo
+							{{name}}
 						</p>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-3">
-						<p class="font-italic">Language</p>
+						<p class="font-italic">Email</p>
 						<p class="text-info">
-							Language
+							{{email}}
 						</p>
 					</div>
-					<div class="col-sm-12 col-md-12 col-lg-2">
-						<p class="font-italic">Classification</p>
-						<p class="text-info">Classification</p>
-					</div>
-					<div class="col-sm-12 col-md-12 col-lg-2">
-						<p class="font-italic">Date of Release</p>
-						<p class="text-info">Date of Release</p>
-					</div>
+
 					<div class="col-sm-12 col-md-12 col-lg-2">
 						<p>
-							<a href="" class="card-link mb-2">
+							<a href="/video/editVideo/{{id}}" class="card-link mb-2">
 								<i class="fas fa-pencil-alt"></i>
 								Edit
 							</a>
 						</p>
 						<p>
-							<a href="" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
+							<a href="/video/deleteVideo/{{id}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
 								<i class="far fa-trash-alt"></i>
 								Delete
 							</a>
@@ -47,7 +40,7 @@
 				</div>
 			</div>
 
-			<div class="accordion" id="storyAccordion">
+			{{!-- <div class="accordion" id="storyAccordion">
 				<div class="card-header" id="headingOne">
 					<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne{{id}}"
 						aria-expanded="false" aria-controls="collapseOne{{id}}" style="text-decoration: none;">
@@ -56,12 +49,12 @@
 				</div>
 				<div id="collapseOne{{id}}" class="collapse" aria-labelledby="headingOne" data-parent="#storyAccordion">
 					<div class="card-body">
-						Story
+						{{story}}
 					</div>
 				</div>
-			</div>
+			</div> --}}
 		</div>
-		{{/each}}
+		{{!-- {{/each}} --}} --}}
 	</div>
 
 </div>
