--- a/views/user/editprofile.handlebars
+++ b/views/user/editprofile.handlebars
@@ -1,33 +1,33 @@
-<div class="row" id="accountpg">
-	<div class="col-md-6 mx-auto">
-		<div class="card card-body" style="border-radius: 60px ; top: 100px">
+<div class="row">
+	{{!-- <div class="col-md-6 mx-auto"> --}}
+		<div class="card card-body" style="border-radius: 60px>
 			<img class="logo" src="/img/logo.png">
-			<h3 class="text-center">ACCOUNT REGISTER</h3>
+			<h3 class="text-center">EDIT PROFILE</h3>
 			<form action="" method="post">
 				<div class="accountform">
 					<div class="form-group">
 						<label for="firstname">First Name</label>
-						<input type="text" class="form-control" name="firstname" value="{{firstname}}" required>
+						<input type="text" class="form-control" name="firstname" value="{{user.firstname}}" required>
 					</div>
 					<div class="form-group">
 						<label for="lastname">Last Name</label>
-						<input type="text" class="form-control" name="lastname" value="{{lastname}}" required>
+						<input type="text" class="form-control" name="lastname" value="{{user.lastname}}" required>
 					</div>
 					<div class="form-group">
 						<label for="username">Username</label>
-						<input type="text" class="form-control" name="username" value="{{username}}" required>
+						<input type="text" class="form-control" name="username" value="{{user.username}}" required>
 					</div>
 					<div class="form-group">
 						<label for="phoneno">Phone Number</label>
-						<input type="tel" class="form-control" name="phoneno" value="{{phoneno}}" required>
+						<input type="tel" class="form-control" name="phoneno" value="{{user.phoneno}}" required>
 					</div>
 					<div class="form-group">
 						<label for="address">Address</label>
-						<input type="text" class="form-control" name="address" value="{{address}}" required>
+						<input type="text" class="form-control" name="address" value="{{user.address}}" required>
 					</div>
 					<div class="form-group">
 						<label for="email">Email</label>
-						<input type="email" name="email" class="form-control" value="{{email}}" required>
+						<input type="email" name="email" class="form-control" value="{{user.email}}" required>
 					</div>
 					<div class="form-group">
 						<label for="password">Password</label>
@@ -40,13 +40,13 @@
 				</div>
 
 				<div class="centered">
-					<h6 style="font-weight: normal ">Have an account? <a href="/user/login"
-							style="color: #8BAD97"><u>Login</u></a></h6>
+					{{!-- <h6 style="font-weight: normal ">Have an account? <a href="/user/login"
+							style="color: #8BAD97"><u>Login</u></a></h6> --}}
 
-					<button type="submit" class="accountbtn">REGISTER</button>
+					<button type="submit" class="accountbtn">EDIT</button>
 				</div>
 
 			</form>
-		</div>
+		{{!-- </div> --}}
 	</div>
 </div>
