--- a/views/user/profile.handlebars
+++ b/views/user/profile.handlebars
@@ -10,9 +10,33 @@
 			<div class="card-body">
 				<div class="row">
 					<div class="col-sm-12 col-md-12 col-lg-3">
-						<p class="font-italic">Name</p>
+						<p class="font-italic">First Name</p>
 						<p class="text-info">
-							{{name}}
+							{{firstname}}
+						</p>
+					</div>
+					<div class="col-sm-12 col-md-12 col-lg-3">
+						<p class="font-italic">Last Name</p>
+						<p class="text-info">
+							{{lastname}}
+						</p>
+					</div>
+					<div class="col-sm-12 col-md-12 col-lg-3">
+						<p class="font-italic">Username</p>
+						<p class="text-info">
+							{{username}}
+						</p>
+					</div>
+					<div class="col-sm-12 col-md-12 col-lg-3">
+						<p class="font-italic">Phone Number</p>
+						<p class="text-info">
+							{{phoneno}}
+						</p>
+					</div>
+					<div class="col-sm-12 col-md-12 col-lg-3">
+						<p class="font-italic">Address</p>
+						<p class="text-info">
+							{{address}}
 						</p>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-3">
@@ -24,13 +48,14 @@
 
 					<div class="col-sm-12 col-md-12 col-lg-2">
 						<p>
-							<a href="/video/editVideo/{{id}}" class="card-link mb-2">
+							<a href="/user/editprofile/{{id}}" class="card-link mb-2">
 								<i class="fas fa-pencil-alt"></i>
 								Edit
 							</a>
 						</p>
 						<p>
-							<a href="/video/deleteVideo/{{id}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
+							<a href="/video/deleteVideo/{{id}}" class="card-link" data-toggle="confirmation"
+								data-title="Confirm delete?">
 								<i class="far fa-trash-alt"></i>
 								Delete
 							</a>
