--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -7,8 +7,8 @@
 					Take our simple quiz to get a daily TCM pack tailored to your goals, lifestyle and diet. Packs start at under
 					SG$0.9/day. Monthly deliveries. Adjust anytime. 
 				</p>
-				<button type="button" class="btn btn-lg btn-landing" data-bs-toggle="modal" data-bs-target="#">
-					Start Quiz
+				<button type="button" class="btn btn-lg btn-landing" data-bs-toggle="modal" data-bs-target="">
+					<a href="/quiz">Start Quiz</a>
 				</button>
 			</div>
 			<img class="img-fluid d-none d-sm-block" src='img/landing-page.png' title='' />
