--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,22 +51,22 @@
 	<link rel="stylesheet" href="/css/style.css">
 
 	<!-- jQuery -->
-	<script src="../js/jquery-2.0.0.min.js" type="text/javascript"></script>
+	<script src="/js/jquery-2.0.0.min.js" type="text/javascript"></script>
 	
 	<!-- Bootstrap4 files-->
-	<script src="../js/bootstrap.bundle.min.js" type="text/javascript"></script>
-	<link href="../css/bootstrap.css" rel="stylesheet" type="text/css" />
+	<script src="/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+	<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />
 	
 	<!-- Font awesome 5 -->
-	<link href="../fonts/fontawesome/css/all.min.css" type="text/css" rel="stylesheet">
+	<link href="/fonts/fontawesome/css/all.min.css" type="text/css" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/f93b590445.js" crossorigin="anonymous"></script>
 	
 	<!-- custom style -->
-	<link href="../css/ui.css" rel="stylesheet" type="text/css" />
-	<link href="../css/responsive.css" rel="stylesheet" />
+	<link href="/css/ui.css" rel="stylesheet" type="text/css" />
+	<link href="/css/responsive.css" rel="stylesheet" />
 	
 	<!-- custom javascript -->
-	<script src="../js/script.js" type="text/javascript"></script>
+	<script src="/js/script.js" type="text/javascript"></script>
 
 	<style>
 		body {
