--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -20,6 +20,9 @@
 			<ul class="navbar-nav ml-auto">
 				{{#if user}}
 				<li class="nav-item">
+					<a href="#" class="nav-link"><i class="fa-solid fa-magnifying-glass"></i></a>
+				</li>
+				<li class="nav-item">
 					<a href="" class="nav-link">|</a>
 				</li>
 				<li class="nav-item">
