--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -83,12 +83,11 @@
 	<h1>What Our Customer Says</h1>
 	<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..</p>
 	<div class="row">
-		<div class="testimonial-col" style="background: #fadda6;">
+		<div class="testimonial-col" style="background: #e0d1b5;">
 			<img src="/img/jungkook.jpg">
 			<div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc egestas velit lacus. Morbi fermentum
-					non neque nec eleifend. Integer at sapien vehicula, placerat neque sit amet, pulvinar arcu. Etiam
-					condimentum libero eget nulla cursus, sit amet tempus magna ornare.</p>
+					non neque nec eleifend.</p>
 				<h3>Lee Ming</h3>
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
@@ -98,12 +97,11 @@
 				<!-- 4 stars -->
 			</div>
 		</div>
-		<div class="testimonial-col" style="background: #fadda6;">
+		<div class="testimonial-col" style="background: #e0d1b5;">
 			<img src="/img/lando.jpg">
 			<div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc egestas velit lacus. Morbi fermentum
-					non neque nec eleifend. Integer at sapien vehicula, placerat neque sit amet, pulvinar arcu. Etiam
-					condimentum libero eget nulla cursus, sit amet tempus magna ornare.</p>
+					non neque nec eleifend.</p>
 				<h3>Carlando Morris</h3>
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
