--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -2,7 +2,11 @@
 <section class="section-subscribe padding-y-lg">
     <div class="container">
 
-        <p class="pb-2 text-center text-white">Delivering the latest product trends and industry news straight to your
+        <h3 class="text-center">
+            Get 20% off your first order now!
+        </h3>
+
+        <p class="pb-2 text-center text-black">Delivering the latest product trends and industry news straight to your
             inbox</p>
 
         <div class="row justify-content-md-center">
@@ -12,11 +16,11 @@
                         <input class="form-control border-0" placeholder="Your Email" type="email">
                     </div> <!-- col.// -->
                     <div class="col-md-4 col-5">
-                        <button type="submit" class="btn btn-block btn-warning"> <i class="fa fa-envelope"></i>
+                        <button type="submit" class="btn btn-block btn-subscribe"> <i class="fa fa-envelope"></i>
                             Subscribe </button>
                     </div> <!-- col.// -->
                 </form>
-                <small class="form-text text-white-50">We’ll never share your email address with a third-party. </small>
+                <small class="form-text">We’ll never share your email address with a third-party. </small>
             </div> <!-- col-md-6.// -->
         </div>
 
