--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -83,6 +83,20 @@
 		left: 100px;
 		top: 564px;
 		}
+
+		.btn-subscribe{
+		color: #000000;
+		background: #8BAD97;
+		border-radius: 60px;
+		width: 200px;
+		height: calc(1.5em + .9rem + 2px);
+		left: 100px;
+		top: 564px;
+		}
+
+		.section-subscribe {
+		background-color: #e0d1b5;
+		}
 	</style>
 
 	<title>The Healing Inc.</title>
