--- a/views/user/profile.handlebars
+++ b/views/user/profile.handlebars
@@ -54,7 +54,7 @@
 							</a>
 						</p>
 						<p>
-							<a href="/video/deleteVideo/{{id}}" class="card-link" data-toggle="confirmation"
+							<a href="/user/deleteaccount/{{id}}" class="card-link" data-toggle="confirmation"
 								data-title="Confirm delete?">
 								<i class="far fa-trash-alt"></i>
 								Delete
