--- a/views/user/editprofile.handlebars
+++ b/views/user/editprofile.handlebars
@@ -4,42 +4,42 @@
 			<img class="logo" src="/img/logo.png">
 			<h3 class="text-center">EDIT PROFILE</h3>
 			<form action="" method="post">
-				<div class="accountform">
-					<div class="form-group">
+				<div>
+					<div class="form-group left spacing1">
 						<label for="firstname">First Name</label>
 						<input type="text" class="form-control" name="firstname" value="{{user.firstname}}" required>
 					</div>
-					<div class="form-group">
+					<div class="form-group left spacing2">
 						<label for="lastname">Last Name</label>
 						<input type="text" class="form-control" name="lastname" value="{{user.lastname}}" required>
 					</div>
-					<div class="form-group">
+					<div class="form-group clear left spacing1">
 						<label for="username">Username</label>
 						<input type="text" class="form-control" name="username" value="{{user.username}}" required>
 					</div>
-					<div class="form-group">
+					<div class="form-group left spacing2">
 						<label for="phoneno">Phone Number</label>
 						<input type="tel" class="form-control" name="phoneno" value="{{user.phoneno}}" required>
 					</div>
-					<div class="form-group">
+					<div class="form-group clear left spacing1">
 						<label for="address">Address</label>
 						<input type="text" class="form-control" name="address" value="{{user.address}}" required>
 					</div>
-					<div class="form-group">
+					<div class="form-group left spacing2">
 						<label for="email">Email</label>
 						<input type="email" name="email" class="form-control" value="{{user.email}}" required>
 					</div>
-					<div class="form-group">
+					<div class="form-group clear left spacing1">
 						<label for="password">Password</label>
 						<input type="password" name="password" class="form-control" value="" required>
 					</div>
-					<div class="form-group">
+					<div class="form-group left spacing2">
 						<label for="password2">Confirm Password</label>
 						<input type="password" name="password2" class="form-control" value="" required>
 					</div>
 				</div>
 
-				<div class="centered">
+				<div class="centered clear">
 					{{!-- <h6 style="font-weight: normal ">Have an account? <a href="/user/login"
 							style="color: #8BAD97"><u>Login</u></a></h6> --}}
 
