--- a/views/user/editprofile.handlebars
+++ b/views/user/editprofile.handlebars
@@ -1,39 +1,39 @@
 <div class="row">
 	{{!-- <div class="col-md-6 mx-auto"> --}}
-		<div class="card card-body" style="border-radius: 60px>
+		<div class="card card-body" style="background:#E8DCD0;">
 			<img class="logo" src="/img/logo.png">
 			<h3 class="text-center">EDIT PROFILE</h3>
 			<form action="" method="post">
 				<div>
-					<div class="form-group left spacing1">
+					<div class="form-group left spacing1o">
 						<label for="firstname">First Name</label>
 						<input type="text" class="form-control" name="firstname" value="{{user.firstname}}" required>
 					</div>
-					<div class="form-group left spacing2">
+					<div class="form-group left spacing2o">
 						<label for="lastname">Last Name</label>
 						<input type="text" class="form-control" name="lastname" value="{{user.lastname}}" required>
 					</div>
-					<div class="form-group clear left spacing1">
+					<div class="form-group clear left spacing1o">
 						<label for="username">Username</label>
 						<input type="text" class="form-control" name="username" value="{{user.username}}" required>
 					</div>
-					<div class="form-group left spacing2">
+					<div class="form-group left spacing2o">
 						<label for="phoneno">Phone Number</label>
 						<input type="tel" class="form-control" name="phoneno" value="{{user.phoneno}}" required>
 					</div>
-					<div class="form-group clear left spacing1">
+					<div class="form-group clear left spacing1o">
 						<label for="address">Address</label>
 						<input type="text" class="form-control" name="address" value="{{user.address}}" required>
 					</div>
-					<div class="form-group left spacing2">
+					<div class="form-group left spacing2o">
 						<label for="email">Email</label>
 						<input type="email" name="email" class="form-control" value="{{user.email}}" required>
 					</div>
-					<div class="form-group clear left spacing1">
+					<div class="form-group clear left spacing1o">
 						<label for="password">Password</label>
 						<input type="password" name="password" class="form-control" value="" required>
 					</div>
-					<div class="form-group left spacing2">
+					<div class="form-group left spacing2o">
 						<label for="password2">Confirm Password</label>
 						<input type="password" name="password2" class="form-control" value="" required>
 					</div>
