--- a/views/quiz/createQuiz.handlebars
+++ b/views/quiz/createQuiz.handlebars
@@ -1,5 +1,14 @@
 <link rel="stylesheet" href="./css/quiz.css">
 
+{{!-- <div class="wrapper">
+    
+        <h2 class="form-signin-heading">Name your quiz</h2>
+        <input type="text" class="form-control" name="quizName" placeholder="Chantalle's Headache Remedy" required="" autofocus="" id="quizName"/>
+        <button class="btn btn-lg btn-primary btn-block" onclick="myquizName()">Submit</button>
+</div>
+
+<p id="demo"></p>
+
 <h1>Quiz on Important Facts</h1>
 <div class="quiz-container">
     <div id="quiz"></div>
@@ -10,166 +19,49 @@
 <div id="results"></div>
 
 <script>
-    (function () {
-            // Functions
-            function buildQuiz() {
-                // variable to store the HTML output
-                const output = [];
+    //show name
+    function myquizName() {
+        var x = document.getElementById("quizName").value;
+        document.getElementById("demo").innerHTML = x;
+    }
+</script> --}}
 
-                // for each question...
-                myQuestions.forEach(
-                    (currentQuestion, questionNumber) => {
+<body>
 
-                        // variable to store the list of possible answers
-                        const answers = [];
+    <div class="quiz-container">
+        <div class="title">Personalization Quiz</div>
 
-                        // and for each available answer...
-                        for (letter in currentQuestion.answers) {
+        <div id="question" class="question"></div>
+        <p id="totalQuestions"></p>
 
-                            // ...add an HTML radio button
-                            answers.push(
-                                `<label>
-              <input type="radio" name="question${questionNumber}" value="${letter}">
-              ${letter} :
-              ${currentQuestion.answers[letter]}
-            </label>`
-                            );
-                        }
+        <label class="option" id="border">
+            <input type="radio" name="option" value="1" />
+            <span class="option1"></span>
+        </label>
+        <br>
+        <label class="option" id="border">
+            <input type="radio" name="option" value="2" />
+            <span class="option2"></span>
+        </label>
+        <br>
+        <label class="option" id="border">
+            <input type="radio" name="option" value="3" />
+            <span class="option3"></span>
+        </label>
+        <!-- Buttons -->
+        <div class="controls">
+            <button class="previous">Previous</button>
+            <button class="next">Next</button>
+        </div>
+    </div>
 
-                        // add this question and its answers to the output
-                        output.push(
-                            `<div class="slide">
-            <div class="question"> ${currentQuestion.question} </div>
-            <div class="answers"> ${answers.join("")} </div>
-          </div>`
-                        );
-                    }
-                );
+    <div class="result">
 
-                // finally combine our output list into one string of HTML and put it on the page
-                quizContainer.innerHTML = output.join('');
-            }
+    </div>
+</body>
 
-            function showResults() {
-
-                // gather answer containers from our quiz
-                const answerContainers = quizContainer.querySelectorAll('.answers');
-
-                // keep track of user's answers
-                let numCorrect = 0;
-
-                // for each question...
-                myQuestions.forEach((currentQuestion, questionNumber) => {
-
-                    // find selected answer
-                    const answerContainer = answerContainers[questionNumber];
-                    const selector = `input[name=question${questionNumber}]:checked`;
-                    const userAnswer = (answerContainer.querySelector(selector) || {}).value;
-
-                    // if answer is correct
-                    if (userAnswer === currentQuestion.correctAnswer) {
-                        // add to the number of correct answers
-                        numCorrect++;
-
-                        // color the answers green
-                        answerContainers[questionNumber].style.color = 'lightgreen';
-                    }
-                    // if answer is wrong or blank
-                    else {
-                        // color the answers red
-                        answerContainers[questionNumber].style.color = 'red';
-                    }
-                });
-
-                // show number of correct answers out of total
-                resultsContainer.innerHTML = `${numCorrect} out of ${myQuestions.length}`;
-            }
-
-            function showSlide(n) {
-                slides[currentSlide].classList.remove('active-slide');
-                slides[n].classList.add('active-slide');
-                currentSlide = n;
-                if (currentSlide === 0) {
-                    previousButton.style.display = 'none';
-                }
-                else {
-                    previousButton.style.display = 'inline-block';
-                }
-                if (currentSlide === slides.length - 1) {
-                    nextButton.style.display = 'none';
-                    submitButton.style.display = 'inline-block';
-                }
-                else {
-                    nextButton.style.display = 'inline-block';
-                    submitButton.style.display = 'none';
-                }
-            }
-
-            function showNextSlide() {
-                showSlide(currentSlide + 1);
-            }
-
-            function showPreviousSlide() {
-                showSlide(currentSlide - 1);
-            }
-
-            // Variables
-            const quizContainer = document.getElementById('quiz');
-            const resultsContainer = document.getElementById('results');
-            const submitButton = document.getElementById('submit');
-            const myQuestions = [
-                {
-                    question: "What's your first name (or nickname)?",
-                    answers: {
-                        a: "Male",
-                        b: "Female",
-                    },
-                    correctAnswer: "a"
-                },
-                {
-                    question: "When it comes to Traditional Chinese Medicine, you",
-                    answers: {
-                        a: "Know more than the average person.",
-                        b: "Know a bit, but want to learn more.",
-                        c: "Are not convinced yet."
-                    },
-                    correctAnswer: "c"
-                },
-                {
-                    question: "Have you taken Traditional Chinese Medicine supplements in the past?",
-                    answers: {
-                        a: "For a while",
-                        b: "On and off",
-                        c: "Never"
-                    },
-                    correctAnswer: "c"
-                },
-                {
-                    question: "What sex were you assigned at birth?",
-                    answers: {
-                        a: "Male",
-                        b: "Female",
-                    },
-                    correctAnswer: "a"
-                },
-            ];
-
-            // Kick things off
-            buildQuiz();
-
-            // Pagination
-            const previousButton = document.getElementById("previous");
-            const nextButton = document.getElementById("next");
-            const slides = document.querySelectorAll(".slide");
-            let currentSlide = 0;
-
-            // Show the first slide
-            showSlide(currentSlide);
-
-            // Event listeners
-            submitButton.addEventListener('click', showResults);
-            previousButton.addEventListener("click", showPreviousSlide);
-            nextButton.addEventListener("click", showNextSlide);
-        })();
-        
+<script src="./js/common.js"></script>
+<script>
+    const blehh = questions.length;
+    document.getElementById("totalQuestions").innerHTML = blehh;
 </script>
