--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -24,7 +24,7 @@
 	<div class="row">
 		<div class="ser-col" style="background: #d4ebdc;">
 			<div style="padding: 4rem;">
-				<i class="fa-solid fa-capsules fa-10x"></i>
+				<i class="fa-solid fa-child-reaching fa-10x"></i>
 			</div>
 			<h3>Know Yourself</h3>
 			<p>
@@ -42,7 +42,7 @@
 		</div>
 		<div class="ser-col">
 			<div style="padding: 4rem;">
-				<i class="fa-solid fa-capsules fa-10x"></i>
+				<i class="fa-solid fa-calendar fa-10x"></i>
 			</div>
 			<h3>Continue Monthly</h3>
 			<p>
