--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -30,7 +30,7 @@
 				</li>
 
 				<li class="nav-item">
-					<a href="/user/profile" class="nav-link">PROFILE</a>
+					<a href="/user/profile" class="nav-link"> {{user.username}}</a>
 				</li>
 
 				<li class="nav-item">
